fixed navbar to collapse

--- a/css/main.css
+++ b/css/main.css
@@ -862,6 +862,25 @@ nav a:hover {
   color: black;
 }
 
+button {
+  width: 30px;
+  height: 30px;
+  background-image: url("../images/icons/mastery.png");
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+@media (max-width: 575px) {
+  button {
+    visibility: visible;
+  }
+}
+@media (min-width: 576px) {
+  button {
+    visibility: hidden;
+  }
+}
+
 .itemCol {
   padding-top: 10px;
   z-index: 1;
